# clash-verge

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: alpha.yml  ci.yml  compatible.yml  meta.yml  test.yml  updater.yml
scripts/: aarch.mjs  check.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/core/: core.rs
src-tauri/src/enhance/: field.rs
src-tauri/src/utils/: init.rs
src/pages/: settings.tsx
src/utils/: clash-fields.ts
