[package]
name = "clash-verge"
version = "0.1.0"
description = "clash verge"
authors = ["Antiwall"]
license = "GPL-3.0"
repository = "https://github.com/Antiwall/clash-verge.git"
default-run = "clash-verge"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
warp = "0.3"
which = "4.2.2"
anyhow = "1.0"
dirs = "5.0.0"
open = "4.0.1"
log = "0.4.14"
ctrlc = "3.2.3"
dunce = "1.0.2"
log4rs = "1.0.0"
nanoid = "0.4.0"
chrono = "0.4.19"
sysinfo = { version="0.30", features= [] }
sysproxy = { git="https://github.com/zzzgydi/sysproxy-rs", branch = "main" }
rquickjs = "0.1.7"
serde_json = "1.0"
serde_yaml = "0.9"
auto-launch = { git="https://github.com/zzzgydi/auto-launch", branch = "main" }
once_cell = "1.18.0"
port_scanner = "0.1.5"
delay_timer = { version="0.11.5" }
parking_lot = "0.12.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tauri = { version = "1.6", features = ["global-shortcut-all", "process-all", "shell-all", "system-tray", "window-all"] }
window-vibrancy = { version = "0.3.0" }
window-shadows = { version = "0.2.0" }
wry = { version = "0.24.3" }


[target.'cfg(windows)'.dependencies]
runas = "1.1.0"
deelevate = "0.2.0"
winreg = { version = "0.50", features = ["transactions"] }
windows-sys = { version = "0.48", features = ["Win32_System_LibraryLoader", "Win32_System_SystemInformation"] }

[target.'cfg(windows)'.dependencies.tauri]
version = "1.2.4"
features = ["global-shortcut-all", "icon-png", "process-all", "shell-all", "system-tray", "updater", "window-all"]

[target.'cfg(linux)'.dependencies.tauri]
version = "1.2.4"
features = ["global-shortcut-all", "process-all", "shell-all", "system-tray", "updater", "window-all", "native-tls-vendored", "reqwest-native-tls-vendored"]


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
verge-dev = []
default-meta = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
